Added Dunst and some minor changes in my dot file

--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -77,9 +77,10 @@ markup=pango
 #color=#dbcb75
 #command=i3-msg -q exec thunderbird
 
-[simple-2]
+[title-2]
 full_text=
 color=#717171
+#color=#fbf8cc
 
 [Title]
 command=xtitle -s | cat
@@ -90,9 +91,10 @@ interval=persist
 #command=~/.config/i3/scripts/i3-focusedwindow 
 #interval=persist
 
-[simple-2]
+[title-2]
 full_text=
 color=#717171
+#color=#fbf8cc
 
 [mediaplayer]
 label=  
@@ -101,15 +103,7 @@ instance=
 interval=5
 signal=10
 color=#fbf8cc
-
-# IP Address 
-[ip]
-label=
-command=ip route get 8.8.8.8 | sed -nr 's/.*src ([0-9.]+).*/\1/p' | awk '{ print " IP:" $1 }'
-interval=60
 color=#fde4cf
-#color=#A4C2F4
-#color=#FFFFFF
 
 #[simple-2]
 #full_text=: :
@@ -221,6 +215,15 @@ command=lslogins | grep $USER | awk '{print $NF}'
 interval=once
 color=#FFFFFF
 
-[shutdown_menu]
-full_text=   
-command=~/.config/i3/scripts/powermenu
+[dunst]
+command=~/.config/i3/scripts/dunst
+interval=once
+format=json
+markup=pango
+#min_width=50
+#align=center
+
+#[shutdown_menu]
+#full_text=   
+#command=~/.config/i3/scripts/powermenu
+
