--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -79,8 +79,8 @@ markup=pango
 
 [title-2]
 full_text=
-color=#717171
-#color=#fbf8cc
+#color=#717171
+color=#fbf8cc
 
 [Title]
 command=xtitle -s | cat
@@ -93,8 +93,8 @@ interval=persist
 
 [title-2]
 full_text=
-color=#717171
-#color=#fbf8cc
+#color=#717171
+color=#fbf8cc
 
 [mediaplayer]
 label=  
