--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -77,24 +77,20 @@ markup=pango
 #color=#dbcb75
 #command=i3-msg -q exec thunderbird
 
-[title-2]
-full_text=
+#[title-2]
+#full_text=
 #color=#717171
-color=#fbf8cc
+#color=#fbf8cc
 
-[Title]
-command=xtitle -s | cat
-interval=persist
+#[Title]
+#command=xtitle -s | cat
+#interval=persist
 
 # ban using this script, causing high cpu usage
 #[i3-focusedwindow]
 #command=~/.config/i3/scripts/i3-focusedwindow 
 #interval=persist
 
-[title-2]
-full_text=
-#color=#717171
-color=#fbf8cc
 
 [mediaplayer]
 label=  
@@ -104,6 +100,11 @@ interval=5
 signal=10
 color=#fbf8cc
 color=#fde4cf
+
+#[title-2]
+#full_text=
+#color=#717171
+#color=#fbf8cc
 
 #[simple-2]
 #full_text=: :
@@ -189,6 +190,17 @@ command=~/.config/i3/scripts/battery1
 # change this to battery-pinebook-pro if you are running on pinebook-pro
 label=
 interval=10
+
+#set power-profile
+[ppd_menu]
+full_text=
+command=~/.config/i3/scripts/power-profiles
+color=#407437
+
+#Show the current power-profile
+[ppd-status]
+command=~/.config/i3/scripts/ppd-status
+interval=5
 
 # display keyboard layout name
 # for keyboard layouts switcher
