--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -134,7 +134,8 @@ blur-background = true;
 blur-background-fixed = false;
 blur-background-exclude = [
     "window_type = 'dock'",
-    "window_type = 'desktop'"
+    "window_type = 'desktop'",
+    "class_g = 'slop'"
 ];
 
 #################################
