--- a/i3/config
+++ b/i3/config
@@ -406,7 +406,8 @@ exec --no-startup-id blueberry-tray
 #exec --no-startup-id xcompmgr -c -C -t-5 -l-5 -r4.2 -o.55 &
 # or:
 # picom: https://wiki.archlinux.org/title/Picom
-exec --no-startup-id picom -CGb
+#exec --no-startup-id picom -CGb
+exec --no-startup-id picom --experimental-backends --backend glx -CGb
 
 # networkmanager-applet
 exec --no-startup-id nm-applet
