--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -102,6 +102,7 @@ shadow-exclude = [
     "class_g ?= 'Cairo-dock'",
     "class_g ?= 'Xfce4-notifyd'",
     "class_g ?= 'Xfce4-power-manager'",
+    "class_g *?= 'slop'",
     "(class_g = 'firefox' || class_g = 'Thunderbird') && (window_type = 'utility' || window_type = 'popup_menu') && argb",
     "_GTK_FRAME_EXTENTS@:c",
     "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
@@ -127,11 +128,18 @@ inactive-dim = 0.1;
 # Do not let dimness adjust based on window opacity.
 # inactive-dim-fixed = true;
 # Blur background of transparent windows. Bad performance with X Render backend. GLX backend is preferred.
-blur-background = true;
+# blur-background = true;
 # Blur background of opaque windows with transparent frames as well.
 # blur-background-frame = true;
 # Do not let blur radius adjust based on window opacity.
-blur-background-fixed = false;
+# blur-background-fixed = false;
+blur: {
+  method = "dual_kawase";
+  strength = 6;
+  background = false;
+  background-frame = false;
+  background-fixed = false;
+};
 blur-background-exclude = [
     "window_type = 'dock'",
     "window_type = 'desktop'",
@@ -192,7 +200,7 @@ vsync = true;
 # Limit picom to repaint at most once every 1 / refresh_rate second to boost performance.
 # This should not be used with --vsync drm/opengl/opengl-oml as they essentially does --sw-opti's job already,
 # unless you wish to specify a lower refresh rate than the actual value.
-sw-opti = true;
+# sw-opti = true;
 
 # Unredirect all windows if a full-screen opaque window is detected, to maximize performance for full-screen windows, like games.
 # Known to cause flickering when redirecting/unredirecting windows.
@@ -228,3 +236,4 @@ wintypes:
         focus = true;
     };
 };
+
