updated with latest dot file

--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -98,8 +98,8 @@ command=~/.config/i3/scripts/mediaplayer
 instance=
 interval=5
 signal=10
-color=#fbf8cc
-color=#fde4cf
+#color=#fbf8cc
+#color=#fde4cf
 
 #[title-2]
 #full_text=
@@ -118,7 +118,8 @@ color=#fde4cf
 [disk]
 label= 
 instance=/
-color=#ffcfd2
+#color=#ffcfd2
+#color=#FFFFFF
 command=~/.config/i3/scripts/disk
 interval=30
 
@@ -127,20 +128,23 @@ interval=30
 # The type defaults to "mem" if the instance is not specified.
 [memory]
 label= 
-color=#f1c0e8
+#color=#f1c0e8
+#color=#FFFFFF
 command=~/.config/i3/scripts/memory
 interval=4
 
 [cpu_usage]
 label= 
-color=#cfbaf0
+#color=#cfbaf0
+#color=#FFFFFF
 command=~/.config/i3/scripts/cpu_usage
 #min_width=CPU: 100.00%
 interval=4
 
 [CPU-temperature]
 label=
-color=#a3c4f3
+#color=#a3c4f3
+#color=#FFFFFF
 command=~/.config/i3/scripts/temperature
 interval=4
 T_WARN=75
@@ -149,11 +153,18 @@ T_CRIT=90
 # where SENSOR_CHIP can be find with sensors output
 # can be used also for GPU temperature or other temperature sensors lm-sensors detects.
 
+[simple-2]
+full_text= 
+#color=#717171
+
 [ssid]
 command=~/.config/i3/scripts/ssid
 #INTERFACE=wlan0
 interval=60
 
+[spacing]
+full_text= 
+#color=#717171
 
 # showing name of connected network (enable for wifi use)
 #[net]
@@ -168,20 +179,18 @@ interval=60
 
 [pavucontrol]
 full_text=
-color=#98f5e1
+#color=#98f5e1
+#color=#FFFFFF
 command=pavucontrol
 
 [volume-pulseaudio]
 command=~/.config/i3/scripts/volume
 #color=#bee1e6
-color=#98f5e1
+#color=#98f5e1
+#color=#FFFFFF
 instance=Master
 signal=1
 interval=once
-
-#[simple-2]
-#full_text=: :
-#color=#717171
 
 # Battery indicator
 [battery]
@@ -201,6 +210,10 @@ color=#407437
 [ppd-status]
 command=~/.config/i3/scripts/ppd-status
 interval=5
+
+[spacing]
+full_text= 
+#color=#717171
 
 # display keyboard layout name
 # for keyboard layouts switcher
@@ -225,7 +238,7 @@ label=
 #command=echo "$USER"
 command=lslogins | grep $USER | awk '{print $NF}'
 interval=once
-color=#FFFFFF
+#color=#FFFFFF
 
 [dunst]
 command=~/.config/i3/scripts/dunst
