--- a/i3/config
+++ b/i3/config
@@ -327,7 +327,7 @@ bindsym $mod+Shift+Print exec maim -s -u | xclip -selection clipboard -t image/p
 set $ws1 "1: 1"
 set $ws2 "2: 2"
 set $ws3 "3: 3"
-set $ws4 "4: 4"
+set $ws4 "4:"
 set $ws5 "5:"
 set $ws6 "6:"
 set $ws7 "7"
@@ -350,7 +350,7 @@ assign [class="Xfce4-terminal"] $ws1
 assign [class="(?i)firefox"] $ws2
 #assign [class="Thunar"] $ws3
 #assign [class="Google-chrome"] $ws3
-assign [class="code-oss"] $ws4
+#assign [class="code-oss"] $ws4
 assign [class="Steam"] $ws10
 assign [class="discord"] $ws9
 
@@ -455,6 +455,7 @@ for_window [class="Xed"] floating enable
 #for_window [class="code-oss"] floating enable
 for_window [class="Blueman-manager"] floating enable
 for_window [class="Protonvpn"] floating enable
+#for_window [class="discord"] floating enable
 
 ######################################
 # color settings for bar and windows #
@@ -472,6 +473,9 @@ set $darkgrey		#383c4a
 set $grey		#b0b5bd
 set $mediumgrey		#8b8b8b
 set $yellowbrown	#e1b700
+set $dark1		#161618
+set $dark2		#212124
+set $grey1		#818181
 
 # define colors for windows:
 #class		        	border		bground		text		indicator	child_border
@@ -506,12 +510,12 @@ strip_workspace_numbers yes
 
 		    colors {
 		    separator          $purple
-		    background         $darkgrey
+		    background         $dark2
 		    statusline         $white
 #                          		border 		        bg		txt		indicator
 		focused_workspace	$mediumgrey	   	$grey		$darkgrey	$purple
 		active_workspace	$lightblue      	$mediumgrey	$darkgrey	$purple
-		inactive_workspace	$darkgrey   		$darkgrey	$grey		$purple
+		inactive_workspace	$dark2   		$dark2		$grey		$purple
 		urgent_workspace	$urgentred	    	$urgentred	$white		$purple
 	}
 }
