added backlight in i3blocks

--- a/i3/config
+++ b/i3/config
@@ -179,7 +179,7 @@ bindsym $mod+Return exec xfce4-terminal
 #bindsym $mod+Return exec cool-retro-term
 
 # kill focused window
-bindsym $mod+q kill
+bindsym $mod+Shift+q kill
 
 # exit-menu
 bindsym $mod+Shift+e exec ~/.config/i3/scripts/powermenu
@@ -203,8 +203,8 @@ bindsym F1 exec ~/.config/i3/scripts/keyhint-2
 # bindsym $mod+F1 exec xed ~/.config/i3/keybindings
 
 # Backlight control
-bindsym XF86MonBrightnessUp exec xbacklight +5
-bindsym XF86MonBrightnessDown exec xbacklight -5
+bindsym XF86MonBrightnessUp exec xbacklight +5 && pkill -RTMIN+13 i3blocks
+bindsym XF86MonBrightnessDown exec xbacklight -5 && pkill -RTMIN+13 i3blocks
 
 # change focus
 bindsym $mod+j focus left
@@ -307,16 +307,16 @@ bindsym $mod+w exec /usr/bin/firefox
 #bindsym $mod+w exec /usr/bin/firefox-developer-edition
 
 bindsym $mod+n exec /usr/bin/thunar
-#bindsym Print exec "scrot ~/%Y-%m-%d-%T-screenshot.png"
 
-## Taking ScreenShots (Using maim)
+## Taking ScreenShots (Using flameshot gui)
 #bindsym Print exec scrot $HOME/Pictures/ScreenShoots/`date +%Y-%m-%d_%H:%M:%S`.png
-bindsym Print exec maim | tee ~/Pictures/ScreenShots/`date +%Y-%m-%d_%H:%M:%S`.png | xclip -selection clipboard -t image/png
-bindsym $mod+Print exec scrot -u $HOME/Pictures/ScreenShots/`date +%Y-%m-%d_%H:%M:%S`.png | xclip -selection clipboard -t image/png
+#bindsym Print exec maim | tee ~/Pictures/ScreenShots/`date +%Y-%m-%d_%H:%M:%S`.png | xclip -selection clipboard -t image/png
+bindsym Print exec flameshot gui
+#bindsym $mod+Print exec scrot -u $HOME/Pictures/ScreenShots/`date +%Y-%m-%d_%H:%M:%S`.png | xclip -selection clipboard -t image/png
 #bindsym $mod+Shift+Print exec scrot -s $HOME/Pictures/ScreenShoots/`date +%Y-%m-%d_%H:%M:%S`.png
-bindsym Shift+Print exec maim -s -u | tee ~/Pictures/ScreenShots/`date +%Y-%m-%d_%H:%M:%S`.png | xclip -selection clipboard -t image/png -i
+#bindsym Shift+Print exec maim -s -u | tee ~/Pictures/ScreenShots/`date +%Y-%m-%d_%H:%M:%S`.png | xclip -selection clipboard -t image/png -i
 # Copy selection area to clipboard only
-bindsym $mod+Shift+Print exec maim -s -u | xclip -selection clipboard -t image/png -i
+#bindsym $mod+Shift+Print exec maim -s -u | xclip -selection clipboard -t image/png -i
 
 ##########################################
 # configuration for workspace behaviour: #
@@ -419,7 +419,6 @@ exec --no-startup-id nitrogen --restore
 #exec --no-startup-id feh --bg-fill /home/zhekai/Pictures/bg/bg1.png
 
 
-
 # set powersavings for display:
 exec --no-startup-id xset s 480 dpms 600 600 600
 
@@ -456,6 +455,7 @@ for_window [class="Xed"] floating enable
 for_window [class="Blueman-manager"] floating enable
 for_window [class="Protonvpn"] floating enable
 for_window [class="Virt-manager"] floating enable
+#for_window [class="GitHub Desktop"] floating enable
 #for_window [class="discord"] floating enable
 
 ######################################
@@ -579,4 +579,3 @@ bindsym $mod+t exec rofi -show window \
 ###################################
 
 bindsym $mod+Shift+p exec feh --bg-fill --randomize /home/zhekai/Pictures/bg/*
-
