--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -115,13 +115,14 @@ signal=10
 # The directory defaults to $HOME if the instance is not specified.
 # The script may be called with a optional argument to set the alert
 # (defaults to 10 for 10%).
+
 [disk]
 label= 
 instance=/
-#color=#ffcfd2
-#color=#FFFFFF
 command=~/.config/i3/scripts/disk
 interval=30
+#color=#ffcfd2
+#color=#FFFFFF
 
 # Memory usage
 #
@@ -162,8 +163,8 @@ command=~/.config/i3/scripts/ssid
 #INTERFACE=wlan0
 interval=60
 
-[spacing]
-full_text= 
+#[spacing]
+#full_text= 
 #color=#717171
 
 # showing name of connected network (enable for wifi use)
@@ -176,6 +177,14 @@ full_text=
 #[bandwidth]
 #command=~/.config/i3/scripts/bandwidth2
 #interval=persist
+
+[backlight]
+command=~/.config/i3/scripts/backlight
+label=☀
+interval=once
+signal=13
+#STEP_SIZE=5
+#USE_SUDO=0
 
 [pavucontrol]
 full_text=
